--- a/index.html
+++ b/index.html
@@ -12,13 +12,53 @@
 </head>
 
 <body>
-    <div class="container">
-        <h2>Countdown to Reunion <span>2021</span></h2>
-        <div class="countdown">
-            <div id="days" data-name="Days">NA</div>
-            <div id="hours" data-name="Hours">NA</div>
-            <div id="minutes" data-name="Minutes">NA</div>
-            <div id="seconds" data-name="Seconds">NA</div>
+    <div
+        style="display: flex; flex-direction: column; justify-content: center; align-items: center;  margin-top: 40px;">
+        <div class="container">
+            <h2>Countdown to Reunion <span>2021</span></h2>
+            <div class="countdown">
+                <div id="days" data-name="Days">NA</div>
+                <div id="hours" data-name="Hours">NA</div>
+                <div id="minutes" data-name="Minutes">NA</div>
+                <div id="seconds" data-name="Seconds">NA</div>
+            </div>
+        </div>
+        <div class="info_section">
+            <div class="event">
+                <h2>We invite you to our 7th year reunion</h2>
+            </div>
+            <div class="details">
+                <div class="contact">
+                    <div class="info">
+                        <p>Contact Details</p>
+                    </div>
+                    <div class="info_content">
+                        <p>Odunlami Rukayat <span>+234 809 897 3643</span></p>
+                        <p>Bamisaye Mobolaji <span>+234 703 127 0668</span></p>
+                    </div>
+                </div>
+                <div class="venue">
+                    <div class="info">
+                        <p>Venue</p>
+                    </div>
+                    <div class="info_content">
+                        <Address>
+                            Ikota Villa, Lekki
+                        </Address>
+                    </div>
+                </div>
+                <div class="account">
+                    <div class="info">
+                        <p>Payment Info</p>
+                    </div>
+                    <div class="info_content">
+                        <p>Adesoji Adebusayo Esther</p>
+                        <p>GTB</p>
+                        <span class="acc_num">0160786218</span>
+
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
