--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
 <body>
     <div
         style="display: flex; flex-direction: column; justify-content: center; align-items: center;  margin-top: 40px;">
-        <div class="container" data-aos="fade-up">
+        <div class="container" data-aos="fade-up" data-aos-duration="3000">
             <h2>Countdown to Reunion <span>2021</span></h2>
             <div class="countdown" data-aos="fade-right">
-                <div id="days" data-name="Days" data-aos="fade-right">NA</div>
-                <div id="hours" data-name="Hours">NA</div>
-                <div id="minutes" data-name="Minutes">NA</div>
-                <div id="seconds" data-name="Seconds">NA</div>
+                <div id="days" data-name="Days" data-aos="fade-right" data-aos="fade-right" data-aos-duration="2000">NA
+                </div>
+                <div id="hours" data-name="Hours" data-aos="fade-right" data-aos-duration="3000">NA</div>
+                <div id="minutes" data-name="Minutes" data-aos="fade-left" data-aos-duration="4000">NA</div>
+                <div id="seconds" data-name="Seconds" data-aos="fade-left" data-aos-duration="9000">NA</div>
             </div>
         </div>
         <div class="info_section">
-            <div class="event" data-aos="fade-up">
+            <div class="event" data-aos="fade-up" data-aos-duration="3000">
                 <h2>We invite you to our 7th year reunion</h2>
             </div>
             <div class="details">
-                <div class="contact" data-aos="fade-left">
+                <div class="contact" data-aos="fade-left" data-aos-duration="2000">
                     <div class="info">
                         <p>Contact Details</p>
                     </div>
@@ -41,7 +42,7 @@
                         <p>Bamisaye Mobolaji <span>+234 703 127 0668</span></p>
                     </div>
                 </div>
-                <div class="venue" data-aos="fade-right">
+                <div class="venue" data-aos="fade-right" data-aos-duration="3000">
                     <div class="info">
                         <p>Venue</p>
                     </div>
@@ -51,7 +52,7 @@
                         </Address>
                     </div>
                 </div>
-                <div class="account" data-aos="fade-left">
+                <div class="account" data-aos="fade-left" data-aos-duration="2000">
                     <div class="info">
                         <p>Payment Info</p>
                     </div>
