--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="./style/style.css">
@@ -18,14 +19,14 @@
 <body>
     <div
         style="display: flex; flex-direction: column; justify-content: center; align-items: center;  margin-top: 40px;">
-        <div class="container" data-aos="fade-up" data-aos-duration="3000">
+        <div class="container">
             <h2>Countdown to Reunion <span>2021</span></h2>
-            <div class="countdown" data-aos="fade-right">
+            <div class="countdown">
                 <div id="days" data-name="Days" data-aos="fade-right" data-aos="fade-right" data-aos-duration="2000">NA
                 </div>
                 <div id="hours" data-name="Hours" data-aos="fade-right" data-aos-duration="3000">NA</div>
-                <div id="minutes" data-name="Minutes" data-aos="fade-left" data-aos-duration="4000">NA</div>
-                <div id="seconds" data-name="Seconds" data-aos="fade-left" data-aos-duration="9000">NA</div>
+                <div id="minutes" data-name="Minutes" data-aos="fade-right" data-aos-duration="4000">NA</div>
+                <div id="seconds" data-name="Seconds" data-aos="fade-right" data-aos-duration="5000">NA</div>
             </div>
         </div>
         <div class="info_section">
@@ -67,6 +68,27 @@
         </div>
     </div>
 </body>
+<footer>
+    <div class="content">
+        <div class="personal_details">
+            <div class="image">
+                <img src="./images/author.jpg" />
+            </div>
+            <div class="contact_details">
+                <div class="name">
+                    <h2>Dolapo Sokoya</h2>
+                    <h5>Software Developer</h5>
+                </div>
+                <a href="mailto:dolaposokoya97@gmail.com">dolaposokoya97@gmail.com</a>
+                <p>+234 913 904 9016</p>
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <a href="https://web.facebook.com/dolapo.sokoyaabdulazeez/" target="_blank"> <i class="fa fa-facebook"></i></a>
+        <a href="https://www.instagram.com/dolexy97/" target="_blank"> <i class="fa fa-instagram"></i></a>
+    </div>
+</footer>
 
 <script src="./script.js"></script>
 
