--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
                     <h2>Dolapo Sokoya</h2>
                     <h5>Software Developer</h5>
                 </div>
-                <a href="mailto:dolaposokoya97@gmail.com">dolaposokoya97@gmail.com</a>
-                <p>+234 913 904 9016</p>
+                <div class="phone">
+                    <a href="mailto:dolaposokoya97@gmail.com">dolaposokoya97@gmail.com</a>
+                    <p>+234 913 904 9016</p>
+                </div>
             </div>
         </div>
     </div>
