--- a/index.html
+++ b/index.html
@@ -67,30 +67,32 @@
             </div>
         </div>
     </div>
-</body>
-<footer>
-    <div class="content">
-        <div class="personal_details">
-            <div class="image">
-                <img src="./images/author.jpg" />
-            </div>
-            <div class="contact_details">
-                <div class="name">
-                    <h2>Dolapo Sokoya</h2>
-                    <h5>Software Developer</h5>
+    <footer>
+        <div class="content">
+            <div class="personal_details">
+                <div class="image">
+                    <img src="./images/author.jpg" />
                 </div>
-                <div class="phone">
-                    <a href="mailto:dolaposokoya97@gmail.com">dolaposokoya97@gmail.com</a>
-                    <p>+234 913 904 9016</p>
+                <div class="contact_details">
+                    <div class="name">
+                        <h2>Dolapo Sokoya</h2>
+                        <h5>Software Developer</h5>
+                    </div>
+                    <div class="phone">
+                        <a href="mailto:dolaposokoya97@gmail.com">dolaposokoya97@gmail.com</a>
+                        <p>+234 913 904 9016</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="content">
-        <a href="https://web.facebook.com/dolapo.sokoyaabdulazeez/" target="_blank"> <i class="fa fa-facebook"></i></a>
-        <a href="https://www.instagram.com/dolexy97/" target="_blank"> <i class="fa fa-instagram"></i></a>
-    </div>
-</footer>
+        <div class="content">
+            <a href="https://web.facebook.com/dolapo.sokoyaabdulazeez/" target="_blank"> <i
+                    class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/dolexy97/" target="_blank"> <i class="fa fa-instagram"></i></a>
+        </div>
+    </footer>
+</body>
+
 
 <script src="./script.js"></script>
 
