--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 </head>
 
 <body>
-    <div
-        style="display: flex; flex-direction: column; justify-content: center; align-items: center;  margin-top: 40px;">
-        <div class="container">
+    <div class="container">
+        <div class="wrapper">
             <h2>Countdown to Reunion <span>2021</span></h2>
             <div class="countdown">
                 <div id="days" data-name="Days" data-aos="fade-right" data-aos="fade-right" data-aos-duration="2000">NA
