--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 
 <body>
     <div class="container">
-        <div class="wrapper">
+        <div class="wrapper" data-aos="flip-up" data-aos-duration="2000">
             <h2>Countdown to Reunion <span>2021</span></h2>
-            <div class="countdown">
-                <div id="days" data-name="Days" data-aos="fade-right" data-aos="fade-right" data-aos-duration="2000">NA
-                </div>
-                <div id="hours" data-name="Hours" data-aos="fade-right" data-aos-duration="3000">NA</div>
-                <div id="minutes" data-name="Minutes" data-aos="fade-right" data-aos-duration="4000">NA</div>
-                <div id="seconds" data-name="Seconds" data-aos="fade-right" data-aos-duration="5000">NA</div>
+            <div class="countdown" data-aos="zoom-out-up" data-aos-duration="3000">
+                <div id="days" data-name="Days">NA</div>
+                <div id="hours" data-name="Hours">NA</div>
+                <div id="minutes" data-name="Minutes">NA</div>
+                <div id="seconds" data-name="Seconds">NA</div>
             </div>
         </div>
         <div class="info_section">
@@ -67,7 +66,7 @@
         </div>
     </div>
     <footer>
-        <div class="content">
+        <div class="content" data-aos="zoom-out-up" data-aos-duration="3000">
             <div class="personal_details">
                 <div class="image">
                     <img src="./images/author.jpg" />
@@ -84,7 +83,7 @@
                 </div>
             </div>
         </div>
-        <div class="content">
+        <div class="content" data-aos="zoom-out-up" data-aos-duration="3000">
             <a href="https://web.facebook.com/dolapo.sokoyaabdulazeez/" target="_blank"> <i
                     class="fa fa-facebook"></i></a>
             <a href="https://www.instagram.com/dolexy97/" target="_blank"> <i class="fa fa-instagram"></i></a>
