Added clear interval to stop countdown

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="wrapper" data-aos="flip-up" data-aos-duration="2000">
             <h2>Countdown to Reunion <span>2021</span></h2>
             <div class="countdown" data-aos="zoom-out-up" data-aos-duration="3000">
-                <div id="days" data-name="Days">NA</div>
-                <div id="hours" data-name="Hours">NA</div>
-                <div id="minutes" data-name="Minutes">NA</div>
-                <div id="seconds" data-name="Seconds">NA</div>
+                <div id="days" data-name="Days">0</div>
+                <div id="hours" data-name="Hours">0</div>
+                <div id="minutes" data-name="Minutes">0</div>
+                <div id="seconds" data-name="Seconds">0</div>
             </div>
         </div>
         <div class="info_section">
