--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <div class="wrapper" data-aos="flip-up" data-aos-duration="2000">
-            <h2>Countdown to Reunion <span>2021</span></h2>
+            <h2>Countdown to Reunion <span id="reunion_year">2021</span></h2>
             <div class="countdown" data-aos="zoom-out-up" data-aos-duration="3000">
                 <div id="days" data-name="Days">0</div>
                 <div id="hours" data-name="Hours">0</div>
